firebase authentication success

--- a/server/.env
+++ b/server/.env
@@ -3,7 +3,7 @@ FRONTEND_URL=http://localhost:5173
 MONGO_URI="mongodb+srv://googleauth:googleauth@cluster0.m8xf50o.mongodb.net/googleloginDB?retryWrites=true&w=majority&appName=Cluster0"
 JWT_EXPIRE=7d
 
-JWT_SECRET_KEY=akjshdkjhsakjdhsaasdsadsadsadasdsdkjdhkjsahdkjsa
+JWT_SECRET_KEY="akjshdkjhsakjdhsaasdsadsadsadasdsdkjdhkjsahdkjsa"
 
 COOKIE_EXPIRE=7
 
